--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,8 @@
         "symfony/web-link": "7.1.*",
         "symfony/yaml": "7.1.*",
         "symfonycasts/tailwind-bundle": "^0.5.3",
+        "tales-from-a-dev/flowbite-bundle": "^0.7.0",
+        "tales-from-a-dev/twig-tailwind-extra": "^0.2.1",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
