--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,8 @@
         "tales-from-a-dev/flowbite-bundle": "^0.7.0",
         "tales-from-a-dev/twig-tailwind-extra": "^0.2.1",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "vich/uploader-bundle": "^2.3"
     },
     "config": {
         "allow-plugins": {
