--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    admin_username: '%env(ADMIN_USERNAME)%'
+    admin_password: '%env(ADMIN_PASSWORD)%'
 
 services:
     # default configuration for services in *this* file
@@ -22,3 +24,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    App\DataFixtures\AppFixtures:
+        arguments:
+            $adminUsername: '%admin_username%'
+            $adminPassword: '%admin_password%'
