--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
+        "league/commonmark": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "symfony/asset": "7.1.*",
@@ -47,7 +48,8 @@
         "symfonycasts/tailwind-bundle": "^0.5.3",
         "tales-from-a-dev/flowbite-bundle": "^0.7.0",
         "tales-from-a-dev/twig-tailwind-extra": "^0.2.1",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.10",
+        "twig/markdown-extra": "^3.10",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^2.3"
     },
