--- a/.env
+++ b/.env
@@ -39,3 +39,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> ADMIN ###
+# Modify to secure the administrator zone
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="admin"
+###> ADMIN ###
